syntax = "proto3";

package cr8r.core;

message PReport {
    string at = 1;
    PReportType ty = 2;
    string msg = 3;
}

enum PReportType {
    SYSTEM_MSG = 0;
    CUSTOM_MSG = 1;
    PROCESS_MSG = 2;
}